--- a/_posts/2024-05-07-bench-hvp.md
+++ b/_posts/2024-05-07-bench-hvp.md
@@ -170,44 +170,55 @@ In what follows, we briefly present the notion of computational graph and the tw
 
 ### Computational graph
 
-A key ingredient of AD is a computational graph associated with the code that evaluates a function. It is a directed acyclic graph that represents the succession of elementary operations required the evaluate a function.  Let us consider a multilayer linear perceptron (MLP) with 2 layers $$f_x:\mathbb{R}^2\times \mathbb{R}^{2\times 2}\to \mathbb{R}$$ defined for a provided $$x\in\mathbb{R}^2$$ by
+A key ingredient of AD is a computational graph associated with the code that evaluates a function.
+It is a directed acyclic graph that represents the succession of elementary operations required the evaluate a function.  
+Simple computational graph of a function $$f:\mathbb{R}^d\to\mathbb{R}^p$$ are typically
+
+{% include figure.html path="assets/img/2024-05-07-bench-hvp/direct_graph.png" class="img-fluid"%}
+
+In this graph, the vertices $$z_i\in\mathbb{R}^{m_i}$$ represent the intermediate states of the evaluation of $$f$$.
+To get the vertex $$z_i$$, we use the values of its parents in the graph $$z_{i-1}$$, with simple transfer functions $$z_i(z_{i-1})$$.
+The computational complexity of the function evaluation depends on the complexity of the considered graph, as one node might have more than one parent.
+The memory footprint of the evaluation of the function is also linked to the maximum number of parents that can have a vertex in the computational graph, as their value needs to be stored until all children nodes have been computed.
+
+Let us take an example with a multilayer linear perceptron (MLP) with 2 layers.
+The function $$f_x:\mathbb{R}^h\times \mathbb{R}^{h\times p}\to \mathbb{R}$$ is defined for $$x\in\mathbb{R}^p$$ by
 
 \begin{equation}\label{eq:mlp}
   f_x(U, W) = \frac12(UWx)^2\enspace.
 \end{equation}
 
+Here, the input $$\theta$$ corresponds to the parameters of the network $$(U, V)$$ and the intermediate steps are $$z_1 = Wx$$, $$z_2 = Uz_1$$ and $$z_3 = \frac12 z_2^2$$.
 A possible computational graph to get $$f_x(U, W)$$ is the following
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/computational_graph.png" class="img-fluid"%}
 
-In this graph, the vertices $$z_i$$ represent the intermediate states of the evaluation of $$f_x$$. Hence, the complexity of a function evaluation depends on the complexity of the considered computational graph. In terms of memory, to get the vertex $$z_i$$, we use the values stored by its parents in the graph. Thus, the memory footprint of the evaluation of the function is linked to the maximum number of parents that can have a vertex in the computational graph. Particularly in our case, each node has at most two parents. The Python code to compute $$f_x$$ by following the previous computational graph is the following
-
+and the associated Python code to compute $$f_x$$ is
 ```python
 def f(U, W):
     z1 = W @ x
     z2 = U @ z1
-    output = 0.5 * z2**2
-    return output
+    z3 = 0.5 * z2**2
+    return z3
 ```
 
-To explain how AD works, we take a simple example. Let us consider a function $$f:\mathbb{R}^d\to\mathbb{R}^p$$ with this computational graph.
+Here, the feed-forward structure of the function makes the computational graph very simple, as each node has a single intermediate result parent.
 
-{% include figure.html path="assets/img/2024-05-07-bench-hvp/direct_graph.png" class="img-fluid"%}
 
-By denoting $$z_1 = \theta$$ and $$z_n = f(\theta)$$ and assuming $$z_i\in\mathbb{R}^{m_i}$$, the chain rule gives us the expression of the Jacobian $$\frac{\partial f}{\partial \theta}(\theta)$$ as a product of the Jacobian of the intermediate states $$z_1, \dots, z_n$$.
+AD uses this computational graph to compute the function's derivatives.
+Using the chain rule, the Jacobian $$\frac{\partial f}{\partial \theta}(\theta)$$ of $$f$$ is obtained as a product of the Jacobian of the intermediate states $$z_1, \dots, z_n$$.
 \begin{equation}\label{eq:chain_rule}
-  \underbrace{\frac{\partial f}{\partial \theta}(\theta)}\_{p\times q} = \frac{\partial z_n}{\partial z_1}
-    =\frac{\partial z_n}{\partial z_2}\frac{\partial z_2}{\partial z_1}=\cdots = \underbrace{\frac{\partial z_n}{\partial z_{n-1}}}\_{m_n\times m_{n-1}}\underbrace{\frac{\partial z_{n-1}}{\partial z_{n-2}}}\_{m_{n-1}\times m_{n-2}}\cdots\underbrace{\frac{\partial z_2}{\partial z_1}}\_{m_2\times m_{1}}\enspace.
+  \underbrace{\frac{\partial f}{\partial \theta}(\theta)}\_{p\times d} = \frac{\partial z_n}{\partial \theta}
+    =\frac{\partial z_n}{\partial z_1}\frac{\partial z_1}{\partial \theta}=\cdots = \underbrace{\frac{\partial z_n}{\partial z_{n-1}}}\_{p\times m_{n-1}}\underbrace{\frac{\partial z_{n-1}}{\partial z_{n-2}}}\_{m_{n-1}\times m_{n-2}}\cdots\underbrace{\frac{\partial z_1}{\partial \theta}}\_{m_1\times d}\enspace.
 \end{equation}
-
-Depending on the order of the multiplication, one can compute the derivative of $$f$$ with respect to $$z_1$$ in two ways: the forward mode and the reverse mode.
+Depending on the order of the multiplication, one can compute the derivative of $$f$$ with respect to $$\theta$$ in two ways: the forward mode and the reverse mode.
 
 ### Forward mode
 
 The forward mode aims at computing JVPs 
 
 \begin{equation}\label{eq:chain_rule_jvp}
-  \frac{\partial f}{\partial \theta}(\theta)\times v = \frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_2}{\partial z_1}v\enspace.
+  \frac{\partial f}{\partial \theta}(\theta)\times v = \frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_1}{\partial \theta}v\enspace.
 \end{equation}
 
 It consists in doing the multiplications in \eqref{eq:chain_rule_jvp} from the right to the left. It is a forward pass in the computational graph where we propagate at the same time the states $$z_i$$ and the partial derivatives $$\frac{\partial z_{i+1}}{\partial z_i}$$. If $$f$$ is real-valued, we get its gradient by computing $$d$$ JVPs since 
@@ -222,17 +233,16 @@ To understand properly what is happening when using forward differentiation, let
 If we code ourselves the forward differentiation to get the JVP, we obtain the following code
 
 ``` python
-def jvp(U, W, vu, vw):
+def jvp(U, W, v_u, v_w):
     # Forward diff of f
     z1 = W @ x
-    vz1 = vw @ x  # Directional derivative of W -> W @ x in the direction vw
-
-    z2 = U @ z1
-    vz2 = U @ vz1 + vu @ z1  #  Directional derivative of (U, z_1) -> U @ z1 in the direction (vu, vz1)
+    v_z1 = v_w @ x  # Directional derivative of W -> W @ x in the direction v_w
   
-    output = vz2 @ z2  # Directional derivative of z2 -> .5*z2**2 in the direction vz2 
-
-    return output
+    z2 = U @ z1
+    v_z2 = U @ v_z1 + v_u @ z1  #  Directional derivative of (U, z_1) -> z2 in the direction (v_u, v_z1)
+  
+    v_z3 = v_z2 @ z2  # Directional derivative of z2 -> .5*z2**2 in the direction v_z2 
+    return v_z3
 ```
 
 In comparison with the code of the evaluation of $$f_x$$, there are two more operations corresponding to the computation of the dual variable `vz1` and `vz2`. In terms of memory, if we consider the computational of the JVP as coded in the previous snippet, the maximum number of parents of a vertex is four. This maximum is achieved by the vertex `vz2` which has the vertices `U`, `vz1`, `vu` and `z1` as parents.
@@ -243,7 +253,7 @@ In `JAX`, we get the JVP of $$f$$ at $$x$$ in the direction $$v$$ with `jax.jvp(
 The reverse mode aims at computing VJPs
 
 \begin{equation}\label{eq:chain_rule_vjp}
-  v^\top\frac{\partial f}{\partial \theta}(\theta) = v^\top\frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_2}{\partial z_1}\enspace.
+  v^\top\frac{\partial f}{\partial \theta}(\theta) = v^\top\frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_1}{\partial \theta}\enspace.
 \end{equation}
 
 In the reverse AD, the multiplications of \eqref{eq:chain_rule_jvp} are done from the left to the right. It requires doing one forward pass in the computational graph to compute the intermediate states $$z_i$$ and then a backward pass to propagate the successive partial derivatives from the left to the right. Contrary to the forward mode, it has a more important memory footprint. Indeed, it requires storing the values of all the states. For instance, to compute the last term $$\frac{\partial z_3}{\partial z_2}$$, one needs the value of $$z_2$$ which was the first computed during the forward pass. If $$f$$ is scalar, its gradient is a VJP with $$v=1$$. Thus, one can get the gradient on $$f$$ by performing only one reverse differentiation. This makes this mode more efficient in computing gradients.
@@ -252,21 +262,21 @@ Let us observe what happens if we code manually the backpropagation to get the g
 
 ``` python
 def gradient(U, W):
-    ## Forward pass
+    # Forward pass
     z1 = W @ x
     z2 = U @ z1
-    output = 0.5 * z2**2
+    z3 = 0.5 * z2**2
 
-    ## Reverse pass
-    ### output = 0.5 * z2**2
-    dz2 = z2
-
-    ### z2 = U @ z1
-    dU = jnp.outer(dz2, z1)
-    dz1 = U.T @ dz2
-
-    ### z1 = W @ x
-    dW = jnp.outer(dz1, x)
+    # Reverse pass
+    ## Transfert function: z3 = 0.5 * z2**2
+    dz2 = z2  # derivative of z3 wrt z2
+  
+    ## Transfert function: z2 = U @ z1
+    dU = jnp.outer(dz2, z1)  # derivative of z3 wrt U
+    dz1 = U.T @ dz2  # derivative of z3 wrt z1
+  
+    ## Transfert function: z1 = W @ x
+    dW = jnp.outer(dz1, x)   # derivative of z3 wrt W
     
     return dU, dW
 ```
@@ -303,36 +313,42 @@ Its implementation in `JAX` is only two lines of code.
 def hvp_forward_over_reverse(f, params, v):
   return jax.jvp(jax.grad(f), (params, ), (v, ))[1]
 ```
-In this case, `jax.grad(f)(params)` is computed by backward AD, whose complexity is two times the complexity of evaluating $$f$$. Thus, the temporal complexity of `hvp_forward_over_reverse` is roughly four times the complexity of the evaluation of $$f$$.
+In this case, `jax.grad(f)(params)` is computed by backward AD, whose complexity is two times the complexity of evaluating $$f$$.
+Thus, the temporal complexity of `hvp_forward_over_reverse` is roughly four times the complexity of the evaluation of $$f$$.
 
 To better see what happens, let us consider again our function $$f_x$$ defined by \eqref{eq:mlp}. The Python code of the `forward-over-reverse` HVP is the following.
 
 ```python
-def forward_over_reverse(U, W, vu, vw):
-    # Forward through f
+def forward_over_reverse(U, W, v_U, v_W):
+    # Forward through the forward pass through f
     z1 = W @ x
-    vz1 = vw @ x
-
+    v_z1 = v_W @ x
+  
     z2 = U @ z1
-    vz2 = U @ vz1 + vu @ z1
-
-    z3 = z2  # dz2
-    vz3 = vz2
-
-    # Backward through f
-    z4 = jnp.outer(z3, z1)  # dU
-    vz4 = jnp.outer(vz3, z1) + jnp.outer(z3, vz1) 
-
-    z5 = U.T @ z3  # dz1
-    vz5 = U.T @ vz3 + vu.T @ z3
-
-    z6 = jnp.outer(z5, x)  # dW
-    vz6 = jnp.outer(vz5, x)
-
-    return vz4, vz6
+    v_z2 = U @ v_z1 + v_U @ z1
+    
+    # z3 = 0.5 * z2**2
+    # Forward through the backward pass through f
+    z4 = z2  # dz2
+    v_z4 = v_z2  # v_dz2
+  
+    z5 = jnp.outer(z4, z1)  # dU
+    v_z5 = jnp.outer(v_z4, z1) + jnp.outer(z4, v_z1)  # v_dU
+  
+    z6 = U.T @ z4  # dz1
+    v_z6 = U.T @ v_z4 + v_U.T @ z4  # v_dz1
+  
+    z7 = jnp.outer(z6, x)  # dW
+    v_z7 = jnp.outer(v_z6, x)  # v_dW
+  
+    return v_z5, v_z7  # v_dU, v_dW
   ```
 
-The take-home message of this part is that, after computing the gradient of $$f_x$$, one can consider a computational graph of this gradient and performs forward differentiation through this new computational graph. Here, the variables `z1`,..., `z6` are the vertices of a computational graph of the gradient of $$f_x$$. The nice thing is that this mode enables getting at the same time the gradient and the HVP. Indeed, in the previous snippet, `z4` and `z6` are actually the components of the gradient of $$f_x$$ which could be also returned if needed. This feature can be useful in bilevel optimization for instance.
+The take-home message of this part is that, after computing the gradient of $$f_x$$, one can consider a computational graph of this gradient and perform forward differentiation through this new computational graph.
+Here, the variables `z1`,..., `z7` are the vertices of a computational graph of the gradient of $$f_x$$.
+The nice thing is that this mode enables getting at the same time the gradient and the HVP.
+Indeed, in the previous snippet, `z5` and `z7` are the components of the gradient of $$f_x$$ which could be also returned if needed. 
+This feature can be useful in bilevel optimization for instance.
 
 ### Reverse-over-reverse
 Instead of doing forward differentiation of the gradient, one can multiply the gradient by $$v$$ and thus get a scalar. We can then backpropagate into this scalar product. This is the reverse-over-reverse mode.
@@ -347,52 +363,50 @@ Since the gradients are computed by backpropagation, the complexity of `hvp_reve
 Writting down the code of the reverse-over-reverse HVP for our function $$f_x$$ defined by \eqref{eq:mlp} makes us understand the differences between this mode and the `forward-over-reverse` mode. Particularly, one can notice that there are more elementary operations in the `reverse-over-reverse` mode than in the `forward-over-reverse` mode. Moreover, in terms of memory footprint, the `reverse-over-reverse` requires storing the values of the vertices of the computational graph of the gradient of $$f_x$$, while the `forward-over-reverse` only needs to store the values of the vertices of the computational graph of $$f_x$$. Thus, the former is less efficient than the latter.
 
 ```python
-def reverse_over_reverse(U, W, vu, vw):
-    # Forward through grad(f)
+def reverse_over_reverse(U, W, v_u, v_w):
+    # Forward through <grad(f), v>
     ## Forward through f
     z1 = W @ x
     z2 = U @ z1
-    output = 0.5 * jnp.linalg.norm(z2)**2
-
+    z3 = 0.5 * jnp.linalg.norm(z2)**2
+  
     ## Reverse through f
-    ### output = 0.5 * jnp.linalg.norm(z2)**2
-    z3 = z2  # dz2
-
-    ### z2 = U @ z1
+    z4 = z2  # dz2
     z4 = jnp.outer(z3, z1) # dU
     z5 = U.T @ z3 # dz1
     z6 = jnp.outer(z5, x) # dW
-
-    # Dot product <grad(f), v>
-    output = jnp.sum(vu * z4) + jnp.sum(vw * z6)
-
-    # Backward through <grad(f),v>
-    ## output = jnp.sum(vu * z4) + jnp.sum(vw * z6)
-    dz6 = vw
-    dz4 = vu
-
+  
+    # Output: dot product <grad(f), v>
+    z7 = jnp.sum(z4 * v_u) + jnp.sum(z6 * v_w)
+  
+    # Backward through z7 = <grad(f),v>
+    ## z7 = jnp.sum(z4 * v_u) + jnp.sum(z6 * v_w)
+    dz6 = v_w
+    dz4 = v_u
+  
     ## z6 = jnp.outer(z5, x)
     dz5 = dz6 @ x
-
+  
     ## z5 = U.T @ z3
     dz3 = U @ dz5
-    dU = jnp.outer(z3, dz5)
-
+    ddU = jnp.outer(z3, dz5)  # Derivative of z7 wrt U
+  
     ## z4 = jnp.outer(z3, z1)
     dz3 += dz4 @ z1
     dz1 = dz4.T @ z3
-
+  
     ## z3 = z2
     dz2 = dz3
-
+  
     ## z2 = U @ z1
     dz1 += dz2 * U
-    dU += jnp.outer(dz2, z1)
-
+    # As U appears multiple times in the graph, we sum its contributions
+    ddU += jnp.outer(dz2, z1) 
+  
     ## z1 = W @ x
-    dW = jnp.outer(dz1, x)
-
-    return dU, dW
+    ddW = jnp.outer(dz1, x)  # Derivative of z7 wrt W
+  
+    return ddU, ddW
   ```
 
 ### Reverse-over-forward
@@ -409,41 +423,36 @@ This method a more efficient than the previous one. Indeed, since we backpropaga
 The code of the `reverse-over-forward` HVP for the MLP $$f_x$$ defined by \eqref{eq:mlp} is the following. 
 
 ```python
-def reverse_over_forward(U, W, vu, vw):
-    # Forward diff of f to get jvp(f, (U, W), (vu, vw))
+def reverse_over_forward(U, W, v_U, v_W):
+    # Forward diff of f to  <grad(f), v>
     z1 = W @ x
-    vz1 = vw @ x
-
+    z6 = v_W @ x  # v_z1
+  
     z2 = U @ z1
-    vz2 = U @ vz1 + vu @ z1
-
-    output = vz2 @ z2
-
-    # Backward pass through jvp(f, (U, W), (vu, vw))
-    ## output = vz2 @ z2
-    dz2 = vz2
-    dvz2 = z2
-
-    ## vz2 = U @ vz1 + vu @ z1
-    dz1 = vu.T @ dvz2
-    dvu = jnp.outer(dvz2, z1) 
-    dvz1 = U.T @ dvz2
-    dU = jnp.outer(dvz2, vz1)
-
+    z5 = U @ z6 + v_U @ z1  # v_z2
+  
+    # output <grad(f), v>
+    z4 = z5 @ z2  # v_z3
+  
+    # Backward pass through <grad(f), v>
+    ## z4 = z5 @ z2
+    dz2 = z5
+    dz5 = z2  # dv_z2
+  
+    ## z5 = U @ z6 + v_U @ z1
+    dz1 = v_U.T @ dz5
+    dz6 = U.T @ dz5  # dv_z1
+    ddU = jnp.outer(dz5, z6)  # derivative of z4 wrt U
+  
     ## z2 = U @ z1
+    # As U and dz1 appear multiple times, we sum their contributions
     dz1 += U.T @ dz2
-    dU += jnp.outer(dz2, z1)
-
-    ## vz1 = vw @ x
-    dvw = jnp.outer(dvz1, x)
+    ddU += jnp.outer(dz2, z1)
     
     ## z1 = W @ x
-    dW = jnp.outer(dz1, x)
-
-    return dU, dW
+    ddW = jnp.outer(dz1, x)
+    return ddU, ddW
 ```
-
-Now we turn to the main contribution of this blog post, which is a benchmark of the different methods to compute HVPs.
 
 ## Benchmark with deep learning architectures
 
