Add d-cite and d-footnote

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -1,8 +1,7 @@
 ---
 layout: distill
-title: >
-  Bridging Information Theory and Bayesian Learning: Exploring the Interplay of the Data Processing Inequality and Function-Space Variational Inference
-description: >
+title: "Bridging the Data Processing Inequality and Function-Space Variational Inference"
+description: >-
   This blog post explores the interplay between the <i>Data Processing Inequality (DPI)</i> and <i>Function-Space Variational Inference (FSVI)</i> within Bayesian deep learning and information theory. After examining the DPI, a cornerstone concept in information theory, and its pivotal role in governing the transformation and flow of information through stochastic processes, we employ its unique connection to FSVI to highlight the FSVI's focus on Bayesian predictive posteriors over parameter space. Throughout the post, theoretical concepts are intertwined with intuitive explanations and mathematical rigor, offering a holistic understanding of these complex topics. The post culminates by synthesizing insights into the significance of predictive priors in model training and regularization, shedding light on their practical implications in areas like continual learning and knowledge distillation. This comprehensive examination not only enriches theoretical understanding but also highlights practical applications in machine learning, making it a valuable read for researchers and practitioners.
 date: 2024-05-07
 future: true
@@ -440,7 +439,7 @@ $$
 
 We take an expectation over $$\pof{y}$$, so we need to look at almost all $$\pof{x \given y} \not= 0$$ for different almost all $$\pof{y}$$ separately to consider equality. $$-\log x$$ is strictly convex, so we need $$F = \frac{\qof{X}}{\pof{X}}$$ to be constant almost everywhere in the support of $$\pof{x \given y}$$ for any fixed $$y$$. Then we have equality in Jensen's inequality.
 
-In the following, I will limit myself to the discrete case to avoid having to deal with measure theory[^measuretheory].
+In the following, I will limit myself to the discrete case to avoid having to deal with measure theory<d-footnote>I currently don't have a good 'toolbox' to express simple ideas cleanly in measure theory. I'm working on it.</d-footnote>.
 To obtain equality, for all $$y$$ with $$\pof{y} \not= 0$$ (i.e. we have support) and for all $$x_1, x_2$$ with $$\pof{x_1 \given y}, \pof{x_2 \given y} \not= 0$$, we need $$\frac{\qof{x_1}}{\pof{x_1}} = \frac{\qof{x_2}}{\pof{x_2}}$$. 
 Equivalently (for the reader, why is then $$\pof{x_1} \not= 0?$$):
 
@@ -452,8 +451,6 @@ $$
 $$
 
 This means that $$\qof{x} = C_y \pof{x}$$ piecewise for all $$x$$ for which $$\pof{x \given y} \not= 0$$ for some fixed $$y$$ with $$\pof{y} \not= 0$$. That is if we keep $$y$$ fixed, all the $$x$$ for which $$\pof{x \given y} \not= 0$$ have the same constant factor $$C_y$$. Then for all $$y$$ with $$\pof{y} \not= 0$$, we have equality and overall equality in **(2)**.
-
-[^measuretheory]: I currently don't have a good 'toolbox' to express simple ideas cleanly in measure theory. I'm working on it.
 
 If for any $$x$$ there are multiple $$y$$, e.g. $$y_1, y_2$$ for which $$\pof{x \given y} \not= 0$$, then we have $$C_{y_1} = C_{y_2}$$.
 
@@ -495,8 +492,8 @@ We have:
 $$
 \begin{aligned}
 \pof{x \given y} &= \qof{x \given y} \\
-\overset{\text{ass. $\pof{y} \not= 0$}}{\iff} \frac{\fof{y \given x}\pof{x}}{\pof{y}} &= \frac{\fof{y \given x}\qof{x}}{\qof{y}} \\
-\overset{\text{ass. $\fof{y \given x}\not= 0$}}{\iff} \frac{\pof{x}}{\pof{y}} &= \frac{\qof{x}}{\qof{y}} \\
+\overset{\text{ass. }\pof{y} \not= 0}{\iff} \frac{\fof{y \given x}\pof{x}}{\pof{y}} &= \frac{\fof{y \given x}\qof{x}}{\qof{y}} \\
+\overset{\text{ass. }\fof{y \given x}\not= 0}{\iff} \frac{\pof{x}}{\pof{y}} &= \frac{\qof{x}}{\qof{y}} \\
 \iff \pof{x} &= \frac{\pof{y}}{\qof{y}} \, \qof{x}.
 \end{aligned}
 $$
@@ -677,9 +674,9 @@ We will recover several interesting results from the literature in a simple form
 
 Most importantly, we consider how FSVI can measure a **predictive** divergence between the approximate and true posterior which is independent of parameter symmetries. 
 With parameter symmetries, I refer to different parameters that yield the same predictions, which is very common in over-parameterized neural networks:
-think of parameter symmetries like different paths leading to the same destination; they might look different but end up at the same predictions^[Thanks to ChatGPT for this analogy! 🤗].
+think of parameter symmetries like different paths leading to the same destination; they might look different but end up at the same predictions<d-footnote>Thanks to ChatGPT for this analogy! 🤗</d-footnote>.
 
-As a nice example and application, we relate FSVI to training with label entropy regularization: a potentially more meaningful prior than the ones usually used in Bayesian neural networks^[In many papers, an isotropic Gaussian is used, even though there are not many reasons given to do so except for its simplicity. Indeed, there are better alternatives, see <https://arxiv.org/abs/2102.06571> and <https://arxiv.org/abs/2105.06868>.].
+As a nice example and application, we relate FSVI to training with label entropy regularization: a potentially more meaningful prior than the ones usually used in Bayesian neural networks<d-footnote>In many papers, an isotropic Gaussian is used, even though there are not many reasons given to do so except for its simplicity. Indeed, there are better alternatives, see <https://arxiv.org/abs/2102.06571> and <https://arxiv.org/abs/2105.06868>.</d-footnote>.
 
 Variational inference is a powerful technique for approximating complex Bayesian posteriors with simpler distributions. In its usual form, it optimizes an approximate, *variational* distribution to match the *Bayesian **parameter** posterior* as closely as possible. This way, it transforms the problem of Bayesian inference into an optimization problem.
 
@@ -700,9 +697,7 @@ $$\Kale{\qof{\W}}{\pof{\W}} \ge \Kale{\qof{Y}}{\pof{Y}}.$$
 
 That is, the KL divergence (*🥬 divergence*) between $$\qof{Y}$$ and $$\pof{Y}$$ cannot be larger than between the original $$\qof{\W}$$ and $$\pof{\W}$$. Intuitively, the stochastic mapping $$\opf$$ induces a bottleneck that reduces how well we can distinguish between $$\opp$$ and $$\opq$$. Finally we have equality when $$\Kale{\qof{\W \given Y}}{\pof{\W \given Y}} = 0$$. See the [first part of this two-part series](https://blog.blackhc.net/2023/08/sdpi_fsvi/) for more details.
 
-The paper "*Understanding Variational Inference in Function-Space*" by Burt et al.\ (2021)[^Burt] succinctly summarizes the DPI as follows:
-
-[^Burt]: Burt, D.R., Ober, S.W., Garriga-Alonso, A. and van der Wilk, M., 2020. Understanding variational inference in function-space. AABI 2021.
+The paper "*Understanding Variational Inference in Function-Space*" by Burt et al. (2021)<d-cite key="burt2021understanding"></d-cite> succinctly summarizes the DPI as follows:
 
 <blockquote>
 The data processing inequality states that if two random variables are transformed in this way, they cannot become easier to tell apart.
@@ -766,7 +761,15 @@ $$
 \end{align}
 $$
 
-where $$\Y... \given \x...$$ are (finite or infinite) sets of samples. That is, we do not only optimize marginal distributions but also joint distributions[^joint-vs-marginal].
+where $$\Y... \given \x...$$ are (finite or infinite) sets of samples. That is, we do not only optimize marginal distributions but also joint distributions.
+
+<aside class="l-body box-note" markdown="1">
+For more on the specific differences between marginal and joint objectives, the workshop paper <https://arxiv.org/abs/2205.08766> provides conceptual thoughts in the same light, which builds on the following important works:
+
+* "The neural testbed: evaluating joint predictions" by Osband et al, 2022<d-cite key="osband2022neural"></d-cite>
+* "Evaluating high-order predictive distributions in deep learning" by Osband et al, 2022<d-cite key="osband2022evaluating"></d-cite>
+* "Beyond marginal uncertainty: how accurately can Bayesian regression models estimate posterior predictive correlations?" by Wang et al, 2021 <d-cite key="wang2021beyond"></d-cite>
+</aside>
 
 The resulting objective
 
@@ -776,18 +779,7 @@ $$
 \end{align}
 $$
 
-is equal to the (negative) *functional ELBO (fELBO)* in "*Functional variational Bayesian neural networks*" by Sun et al.\ (2019)[^Sun19]---with caveats that we discuss below.
-
-[^Sun19]: Sun, S., Zhang, G., Shi, J. and Grosse, R., 2019. Functional variational Bayesian neural networks. ICLR.
-
-[^joint-vs-marginal]: For more on the specific differences between marginal and joint objectives, the workshop paper <https://arxiv.org/abs/2205.08766> provides conceptual thoughts in the same light, which builds on the following important works:
-
-    * Osband, Wen, Asghari, Dwaracherla, Lu, Ibrahimi, Lawson, Hao, O’Donoghue, & Van Roy (2022). The neural testbed: evaluating joint predictions. Conference on Neural Information Processing Systems.
-
-    * Osband, Wen, Asghari, Dwaracherla, Lu, & Van Roy (2022). Evaluating high-order predictive distributions in deep learning. Conference on Uncertainty in Artificial Intelligence.
-
-    * Wang, Sun, & Grosse (2021). Beyond marginal uncertainty: how accurately can Bayesian regression models estimate posterior predictive correlations? International Conference on Artificial Intelligence and Statistics.
-
+is equal to the (negative) *functional ELBO (fELBO)* in "*Functional variational Bayesian neural networks*" by Sun et al. (2019)<d-cite key="sun2019functional"></d-cite>---with caveats that we discuss below.
 
 ## Choosing $$\x...$$
 
@@ -799,10 +791,8 @@ Given the chain inequality, it is obvious that the larger the set $$\x...$$, the
 Hence, if we could choose an infinite set of points well, we might be able to get the tightest possible inequality. 
 However, this might not be tractable and in practice, it is often not.
 
-Some works take a supremum over finite subsets of a certain size, essentially building a core-set as an approximation (Rudner et al., 2022a[^TR1]/b[^TR2]); 
-others take an expectation over the finite sets of input samples (Sun et al., 2019)[^Sun19], which is not necessarily yielding the tightest inequality but provides an unbiased estimate; while again other works focus on finite datasets for which the all points can be taken into account (Klarner et al., 2023[^Klarner23]).
-
-[^Klarner23]: Klarner, Leo, Tim GJ Rudner, Michael Reutlinger, Torsten Schindler, Garrett M. Morris, Charlotte Deane, and Yee Whye Teh. "Drug Discovery under Covariate Shift with Domain-Informed Prior Distributions over Functions." (2023).
+Some works take a supremum over finite subsets of a certain size, essentially building a core-set as an approximation (Rudner et al., 2022a<d-cite key="rudner2022tractable"></d-cite>/b<d-cite key="rudner2022continual"></d-cite>); 
+others take an expectation over the finite sets of input samples (Sun et al., 2019)<d-cite key="sun2019functional"></d-cite>, which is not necessarily yielding the tightest inequality but provides an unbiased estimate; while again other works focus on finite datasets for which the all points can be taken into account (Klarner et al., 2023<d-cite key="klarner2023drug"></d-cite>).
 
 We will discuss the tightness of the inequality and the implications in the data limit below.
 
@@ -818,15 +808,12 @@ When we directly optimize the 🥬 divergence on the finite input dataset, for e
 
 This is of particular interest in continual learning, where the prior for the next task is chosen to be the posterior from the previous task. In this case, the functional ELBO can be used to approximate the posterior of the previous model while incorporating new data.
 
-For two great papers that are very readable and provide further insights, see "*Continual learning via sequential function-space variational inference*"[^TR2] and "*Tractable function-space variational inference in Bayesian neural networks*"[^TR1], both by Rudner et al.\ (2022).
-
-[^TR1]: Rudner, T.G., Chen, Z., Teh, Y.W. and Gal, Y., 2022. Tractable function-space variational inference in Bayesian neural networks. Advances in Neural Information Processing Systems.
-[^TR2]: Rudner, T.G., Bickford Smith, F., Feng, Q., Teh, Y.W. and Gal, Y., 2022. Continual learning via sequential function-space variational inference. International Conference on Machine Learning.
+For two great papers that are very readable and provide further insights, see "*Continual learning via sequential function-space variational inference*"<d-cite key="rudner2022continual"></d-cite> and "*Tractable function-space variational inference in Bayesian neural networks*"<d-cite key="rudner2022tractable"></d-cite>, both by Rudner et al. (2022).
 
 ## Comparison to FSVI in the literature
 
 <aside class="l-body box-error" markdown="1">
-An important detail (thanks to [Freddie Bickford Smith](https://fbickfordsmith.com/) for pointing this out) is that in above FSVI papers, the DPI is applied to the *logits* not the *probabilities*. That is we have a distribution over logits, which adds an extra layer of uncertainty. Unlike the class probabilities, which we can also obtain from a deterministic neural network, thanks to the semantic interpretation of the outputs as distribution $$\pof{\y \given \x, \w}$$, a deterministic neural network only provides us with deterministic logits and not a distribution over them. Only a (more) Bayesian approach can provide this.
+An important detail is that in above FSVI papers, the DPI is applied to the *logits* not the *probabilities*. That is we have a distribution over logits, which adds an extra layer of uncertainty. Unlike the class probabilities, which we can also obtain from a deterministic neural network, thanks to the semantic interpretation of the outputs as distribution $$\pof{\y \given \x, \w}$$, a deterministic neural network only provides us with deterministic logits and not a distribution over them. Only a (more) Bayesian approach can provide this.
 
 In general, we have the following inequality chain that relates the 🥬 divergence between the logits $$\L$$, which is a vector unlike $$\Y$$, and the 🥬 divergence between the output probabilities for $$\Y$$ to the 🥬 divergence between the parameters $$\W$$:
 
@@ -840,7 +827,7 @@ $$
 </aside>
 
 
-In practice, both works by Rudner et al.\ (2022), for example, linearize the logits^[The final activations of the neural network before applying the softmax function (in multi-class classification), for example. Not to be confused with the pre-logits (e.g. embeddings).] (similar to a Laplace approximation) and use the DPI to shown (in their notation):
+In practice, both works by Rudner et al.\ (2022), for example, linearize the logits<d-footnote>The final activations of the neural network before applying the softmax function (in multi-class classification), for example. Not to be confused with the pre-logits (e.g. embeddings).</d-footnote> (similar to a Laplace approximation) and use the DPI to shown (in their notation):
 
 $$
 \mathbb{D}_{\mathrm{KL}}\left(q_{f(\cdot ; \boldsymbol{\Theta})} \| p_{f(\cdot ; \boldsymbol{\Theta})}\right) \leq \mathbb{D}_{\mathrm{KL}}\left(q_{\Theta} \| p_{\Theta}\right)
@@ -942,8 +929,7 @@ has the same predictions within the domain $$\x \in (0, 1)$$ while being differe
 
 Importantly, this definition is consistent with Bayesian inference:
 
-<aside class="l-body box-note" markdown="1">
-$$[\w]$$ commutes with Bayesian inference:
+<aside class="l-body box-note" markdown="1">$$[\w]$$ commutes with Bayesian inference:
 
 $$
 \hpof{[\w] \given \Dany} = \sum_{\w' \in [\w]} \pof{\w' \given \Dany}.
@@ -1074,9 +1060,7 @@ $$
 
 What is the advantage of this all?
 
-In Bayesian deep learning, we often use parameter priors that are not meaningful in the sense that they do not take parameter symmetries into account. For example, a unit Gaussian prior over the parameters of a neural network does not induce different predictions for different parameters necessarily. While this prior can be sensible from a parameter compression perspective (e.g.\ see Hinton and van Camp (1993)[^bitsback]), this does not have to be the only consideration.
-
-[^bitsback]: Hinton, G.E. and van Camp, D., 1993, August. Keeping the neural networks simple by minimizing the description length of the weights. In Proceedings of the sixth annual conference on Computational learning theory.
+In Bayesian deep learning, we often use parameter priors that are not meaningful in the sense that they do not take parameter symmetries into account. For example, a unit Gaussian prior over the parameters of a neural network does not induce different predictions for different parameters necessarily. While this prior can be sensible from a parameter compression perspective (e.g.\ see Hinton and van Camp (1993)<d-cite key="hinton1993keeping"></d-cite>), this does not have to be the only consideration.
 
 With function priors, that is predictive priors, we can induce more meaningful priors because we can focus on the predictions and ignore the parameters. This can connect Bayesian approaches to data augmentation and other regularization techniques.
 
@@ -1109,11 +1093,11 @@ $$
 
 This is the same as an MLE minimization objective with an additional entropy regularization term $$-\xHof{\qof{\Y \given \x}}$$ for different $$\x$$ that prevents the model from overfitting to the labels and collapsing to the one-hot encoding of the labels.
 
-Thus, in the simplest approximation, the DPI and functional variational inference give us a new perspective on label entropy regularization (and also label noise as I will *shortly* discuss in the next post 🤞).
+Thus, in the simplest approximation, the DPI and functional variational inference give us a new perspective on label entropy regularization.
 
 ## Knowledge Distillation
 
-Obviously, assuming non-uniform prior predictions, $$\E{\pdata{\x}}{\Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}}$$ can be related to knowledge distillation in deep neural networks as introduced by Hinton et al. (2015)^[Hinton, Geoffrey, Oriol Vinyals, and Jeff Dean. "Distilling the knowledge in a neural network." NeurIPS Deep Learning Workshop (2015).].
+Obviously, assuming non-uniform prior predictions, $$\E{\pdata{\x}}{\Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}}$$ can be related to knowledge distillation in deep neural networks as introduced by Hinton et al. (2015)<d-cite key="hinton2015distilling"></d-cite>.
 
 The main difference is that knowledge distillation is using the reverse KL divergence instead of the forward KL divergence.
 
