--- a/assets/bibliography/2024-05-07-update-frequency-in-mbrl.bib
+++ b/assets/bibliography/2024-05-07-update-frequency-in-mbrl.bib
@@ -770,7 +770,7 @@ publisher = {Curran Associates, Inc.},
  year={2011}
 }
 
-@Article{Pineda2021MBRL,
+@Article{Pineda2021,
   author  = {Luis Pineda and Brandon Amos and Amy Zhang and Nathan O. Lambert and Roberto Calandra},
   journal = {Arxiv},
   title   = {MBRL-Lib: A Modular Library for Model-based Reinforcement Learning},
@@ -1040,6 +1040,14 @@ publisher = {MIT Press},
  title = {On-line Policy Improvement using Monte-Carlo Search},
  volume = {9},
  year = {1997}
+}
+
+@misc{Towers2023,
+        title = {Gymnasium},
+        url = {https://zenodo.org/record/8127025},
+        urldate = {2023-07-08},
+        publisher = {Zenodo},
+        author = {Towers, Mark and Terry, Jordan K. and Kwiatkowski, Ariel and Balis, John U. and Cola, Gianluca de and Deleu, Tristan and Goulão, Manuel and Kallinteris, Andreas and KG, Arjun and Krimmel, Markus and Perez-Vicente, Rodrigo and Pierré, Andrea and Schulhoff, Sander and Tai, Jun Jet and Shen, Andrew Tan Jin and Younis, Omar G.},
 }
 
 @article{Tunyasuvunakool2020,
