Fixes in citations

--- a/assets/bibliography/2024-05-07-rlhf-without-rl.bib
+++ b/assets/bibliography/2024-05-07-rlhf-without-rl.bib
@@ -69,3 +69,20 @@
   journal={arXiv preprint arXiv:2311.10702},
   year={2023}
 }
+
+@article{peng2019advantage,
+  title={Advantage-weighted regression: Simple and scalable off-policy reinforcement learning},
+  author={Peng, Xue Bin and Kumar, Aviral and Zhang, Grace and Levine, Sergey},
+  journal={arXiv preprint arXiv:1910.00177},
+  year={2019}
+}
+
+@inproceedings{peters2010relative,
+  title={Relative entropy policy search},
+  author={Peters, Jan and Mulling, Katharina and Altun, Yasemin},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={24},
+  number={1},
+  pages={1607--1612},
+  year={2010}
+}
