--- a/assets/bibliography/2024-05-07-update-frequency-in-mbrl.bib
+++ b/assets/bibliography/2024-05-07-update-frequency-in-mbrl.bib
@@ -134,7 +134,7 @@ title = {Evaluating Model-Based Planning and Planner Amortization for Continuous
 
 @inproceedings{Deisenroth2011,
     author = {Marc Peter Deisenroth and Carl Edward Rasmussen},
-    title = {{PILCO}: A Model-Based and Data-Efficient Approach to Policy Search},
+    title = {PILCO: A Model-Based and Data-Efficient Approach to Policy Search},
     booktitle = {Proceedings of the International Conference on Machine Learning},
     year = {2011}
 }
