Fix rendering issue

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -148,8 +148,7 @@ $$\require{mathtools}
 \DeclareMathOperator{\opExpectation}{\mathbb{E}}
 \newcommand{\E}[2]{\opExpectation_{#1} \left [ #2 \right ]}
 \newcommand{\simpleE}[1]{\opExpectation_{#1}}
-\newcommand\MidSymbol[1][]{%
-\:#1\:}
+\newcommand{\MidSymbol}[1][]{\:#1\:}
 \newcommand{\given}{\MidSymbol[\vert]}
 \DeclareMathOperator{\opmus}{\mu^*}
 \newcommand{\IMof}[1]{\opmus[#1]}
